// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slide /> can render a picture element 1`] = `
<li>
  <picture>
    <source
      srcSet="#"
      type="image/webp"
    />
    <source
      srcSet="#"
      type="image/jpg"
    />
    <img
      alt=""
      src="#"
    />
  </picture>
</li>
`;

exports[`<Slide /> renders 1`] = `
<li>
  <img
    src="#"
  />
</li>
`;
